objects/Related_Capability_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Capability_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source SI Activity</label>
        <referenceTo>DRDW_Proj_Activity__c</referenceTo>
        <relationshipLabel>Activity Dependencies (Capability Activity)</relationshipLabel>
        <relationshipName>Related_Capability_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability_Name__c</fullName>
        <formula>Capability_Activity__r.Parent_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source SI Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependency_Type__c</fullName>
        <description>Finish to start (FS)  -&gt; A FS B means &quot;activity A must finish before activity B can begin&quot;
Finish to finish (FF) -&gt; A FF B means &quot;activity A must finish before activity B can finish&quot;
Start to start (SS)    -&gt; A SS B means &quot;activity A must start before activity B can start&quot;
Start to finish (SF)   -&gt; A SF B means &quot;activity A must start before activity B finishes&quot;</description>
        <inlineHelpText>FS  -&gt; activity A must finish before activity B can begin
FF -&gt; activity A must finish before activity B can finish
SS -&gt; activity A must start before activity B can start
SF -&gt; activity A must start before activity B finishes</inlineHelpText>
        <label>Dependency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to start (FS)</fullName>
                </value>
                <value>
                    <fullName>Finish to finish (FF)</fullName>
                </value>
                <value>
                    <fullName>Start to start (SS)</fullName>
                </value>
                <value>
                    <fullName>Start to finish (SF)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependent_Capability_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent SI Activity</label>
        <referenceTo>DRDW_Proj_Activity__c</referenceTo>
        <relationshipLabel>Activity Dependencies (Dependent Capability Activity)</relationshipLabel>
        <relationshipName>Related_Capability_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Capability_Name__c</fullName>
        <formula>Dependent_Capability_Activity__r.Parent_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent SI Name</label>
        <type>Text</type>
    </fields>
    <label>Activity Dependency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capability_Activity__c</columns>
        <columns>Capability_Name__c</columns>
        <columns>Dependency_Type__c</columns>
        <columns>Dependent_Capability_Activity__c</columns>
        <columns>Dependent_Capability_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Activity Dependencies</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Related SI Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Same_Parent</fullName>
        <active>true</active>
        <errorConditionFormula>Capability_Activity__r.Parent_Project__c =  Dependent_Capability_Activity__r.Parent_Project__c</errorConditionFormula>
        <errorDisplayField>Dependent_Capability_Activity__c</errorDisplayField>
        <errorMessage>Dependent Activity CANNOT belong to same Capability.  Please select activity from another Capability as the dependent activity instead.</errorMessage>
    </validationRules>
</CustomObject>